// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UrlFormatEditor should render label template help 1`] = `
<React.Fragment>
  <InjectIntl(LabelTemplateFlyout)
    isVisible={true}
    onClose={[Function]}
  />
  <InjectIntl(UrlTemplateFlyout)
    isVisible={false}
    onClose={[Function]}
  />
  <EuiFormRow
    describedByIds={Array []}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    label={
      <FormattedMessage
        defaultMessage="Type"
        id="common.ui.fieldEditor.url.typeLabel"
        values={Object {}}
      />
    }
  >
    <EuiSelect
      compressed={false}
      data-test-subj="urlEditorType"
      fullWidth={false}
      hasNoInitialSelection={false}
      isLoading={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Link",
            "value": "a",
          },
          Object {
            "text": "Image",
            "value": "img",
          },
          Object {
            "text": "Audio",
            "value": "audio",
          },
        ]
      }
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    error={null}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiLink
        color="primary"
        onClick={[Function]}
        type="button"
      >
        <FormattedMessage
          defaultMessage="URL template help"
          id="common.ui.fieldEditor.url.template.helpLinkText"
          values={Object {}}
        />
      </EuiLink>
    }
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="URL template"
        id="common.ui.fieldEditor.url.urlTemplateLabel"
        values={Object {}}
      />
    }
  >
    <EuiFieldText
      compressed={false}
      data-test-subj="urlEditorUrlTemplate"
      fullWidth={false}
      isLoading={false}
      onChange={[Function]}
      value=""
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    error={null}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiLink
        color="primary"
        onClick={[Function]}
        type="button"
      >
        <FormattedMessage
          defaultMessage="Label template help"
          id="common.ui.fieldEditor.url.labelTemplateHelpText"
          values={Object {}}
        />
      </EuiLink>
    }
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="Label template"
        id="common.ui.fieldEditor.url.labelTemplateLabel"
        values={Object {}}
      />
    }
  >
    <EuiFieldText
      compressed={false}
      data-test-subj="urlEditorLabelTemplate"
      fullWidth={false}
      isLoading={false}
      onChange={[Function]}
      value=""
    />
  </EuiFormRow>
  <InjectIntl(FormatEditorSamplesComponent)
    samples={Array []}
  />
</React.Fragment>
`;

exports[`UrlFormatEditor should render normally 1`] = `
<React.Fragment>
  <InjectIntl(LabelTemplateFlyout)
    isVisible={false}
    onClose={[Function]}
  />
  <InjectIntl(UrlTemplateFlyout)
    isVisible={false}
    onClose={[Function]}
  />
  <EuiFormRow
    describedByIds={Array []}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    label={
      <FormattedMessage
        defaultMessage="Type"
        id="common.ui.fieldEditor.url.typeLabel"
        values={Object {}}
      />
    }
  >
    <EuiSelect
      compressed={false}
      data-test-subj="urlEditorType"
      fullWidth={false}
      hasNoInitialSelection={false}
      isLoading={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Link",
            "value": "a",
          },
          Object {
            "text": "Image",
            "value": "img",
          },
          Object {
            "text": "Audio",
            "value": "audio",
          },
        ]
      }
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    error={null}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiLink
        color="primary"
        onClick={[Function]}
        type="button"
      >
        <FormattedMessage
          defaultMessage="URL template help"
          id="common.ui.fieldEditor.url.template.helpLinkText"
          values={Object {}}
        />
      </EuiLink>
    }
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="URL template"
        id="common.ui.fieldEditor.url.urlTemplateLabel"
        values={Object {}}
      />
    }
  >
    <EuiFieldText
      compressed={false}
      data-test-subj="urlEditorUrlTemplate"
      fullWidth={false}
      isLoading={false}
      onChange={[Function]}
      value=""
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    error={null}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiLink
        color="primary"
        onClick={[Function]}
        type="button"
      >
        <FormattedMessage
          defaultMessage="Label template help"
          id="common.ui.fieldEditor.url.labelTemplateHelpText"
          values={Object {}}
        />
      </EuiLink>
    }
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="Label template"
        id="common.ui.fieldEditor.url.labelTemplateLabel"
        values={Object {}}
      />
    }
  >
    <EuiFieldText
      compressed={false}
      data-test-subj="urlEditorLabelTemplate"
      fullWidth={false}
      isLoading={false}
      onChange={[Function]}
      value=""
    />
  </EuiFormRow>
  <InjectIntl(FormatEditorSamplesComponent)
    samples={Array []}
  />
</React.Fragment>
`;

exports[`UrlFormatEditor should render url template help 1`] = `
<React.Fragment>
  <InjectIntl(LabelTemplateFlyout)
    isVisible={false}
    onClose={[Function]}
  />
  <InjectIntl(UrlTemplateFlyout)
    isVisible={true}
    onClose={[Function]}
  />
  <EuiFormRow
    describedByIds={Array []}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    label={
      <FormattedMessage
        defaultMessage="Type"
        id="common.ui.fieldEditor.url.typeLabel"
        values={Object {}}
      />
    }
  >
    <EuiSelect
      compressed={false}
      data-test-subj="urlEditorType"
      fullWidth={false}
      hasNoInitialSelection={false}
      isLoading={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Link",
            "value": "a",
          },
          Object {
            "text": "Image",
            "value": "img",
          },
          Object {
            "text": "Audio",
            "value": "audio",
          },
        ]
      }
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    error={null}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiLink
        color="primary"
        onClick={[Function]}
        type="button"
      >
        <FormattedMessage
          defaultMessage="URL template help"
          id="common.ui.fieldEditor.url.template.helpLinkText"
          values={Object {}}
        />
      </EuiLink>
    }
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="URL template"
        id="common.ui.fieldEditor.url.urlTemplateLabel"
        values={Object {}}
      />
    }
  >
    <EuiFieldText
      compressed={false}
      data-test-subj="urlEditorUrlTemplate"
      fullWidth={false}
      isLoading={false}
      onChange={[Function]}
      value=""
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    error={null}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiLink
        color="primary"
        onClick={[Function]}
        type="button"
      >
        <FormattedMessage
          defaultMessage="Label template help"
          id="common.ui.fieldEditor.url.labelTemplateHelpText"
          values={Object {}}
        />
      </EuiLink>
    }
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="Label template"
        id="common.ui.fieldEditor.url.labelTemplateLabel"
        values={Object {}}
      />
    }
  >
    <EuiFieldText
      compressed={false}
      data-test-subj="urlEditorLabelTemplate"
      fullWidth={false}
      isLoading={false}
      onChange={[Function]}
      value=""
    />
  </EuiFormRow>
  <InjectIntl(FormatEditorSamplesComponent)
    samples={Array []}
  />
</React.Fragment>
`;
